workspace-sf/force-app/main/default/objects/public_boleto__x/public_boleto__x.object-meta.xml
<CustomObject>
    <description>public$boleto</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$boleto</externalName>
    <label>public$boleto</label>
    <pluralLabel>public$boleto</pluralLabel>
</CustomObject>