workspace-sf/force-app/main/default/objects/public_boleto__x/fields/aceite__c.field-meta.xml
<CustomField>
    <fullName>aceite__c</fullName>
    <description>aceite</description>
    <externalDeveloperName>aceite</externalDeveloperName>
    <label>aceite</label>
    <length>10</length>
    <type>Text</type>
</CustomField>