workspace-sf/force-app/main/default/objects/public_boleto__x/fields/agenciacodigocedente__c.field-meta.xml
<CustomField>
    <fullName>agenciacodigocedente__c</fullName>
    <description>agenciacodigocedente</description>
    <externalDeveloperName>agenciacodigocedente</externalDeveloperName>
    <label>agenciacodigocedente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>