workspace-sf/force-app/main/default/objects/public_boleto__x/fields/banco__c.field-meta.xml
<CustomField>
    <fullName>banco__c</fullName>
    <description>banco</description>
    <externalDeveloperName>banco</externalDeveloperName>
    <label>banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>