workspace-sf/force-app/main/default/objects/public_boleto__x/fields/carteira__c.field-meta.xml
<CustomField>
    <fullName>carteira__c</fullName>
    <description>carteira</description>
    <externalDeveloperName>carteira</externalDeveloperName>
    <label>carteira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>