workspace-sf/force-app/main/default/objects/public_boleto__x/fields/codigobanco__c.field-meta.xml
<CustomField>
    <fullName>codigobanco__c</fullName>
    <description>codigobanco</description>
    <externalDeveloperName>codigobanco</externalDeveloperName>
    <label>codigobanco</label>
    <length>30</length>
    <type>Text</type>
</CustomField>