workspace-sf/force-app/main/default/objects/public_boleto__x/fields/codigodigitavel__c.field-meta.xml
<CustomField>
    <fullName>codigodigitavel__c</fullName>
    <description>codigodigitavel</description>
    <externalDeveloperName>codigodigitavel</externalDeveloperName>
    <label>codigodigitavel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>