workspace-sf/force-app/main/default/objects/public_boleto__x/fields/corretor__c.field-meta.xml
<CustomField>
    <fullName>corretor__c</fullName>
    <description>corretor</description>
    <externalDeveloperName>corretor</externalDeveloperName>
    <label>corretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>