workspace-sf/force-app/main/default/objects/public_boleto__x/fields/datacriacao__c.field-meta.xml
<CustomField>
    <fullName>datacriacao__c</fullName>
    <description>datacriacao</description>
    <externalDeveloperName>datacriacao</externalDeveloperName>
    <label>datacriacao</label>
    <type>Date</type>
</CustomField>