workspace-sf/force-app/main/default/objects/public_boleto__x/fields/datadocumento__c.field-meta.xml
<CustomField>
    <fullName>datadocumento__c</fullName>
    <description>datadocumento</description>
    <externalDeveloperName>datadocumento</externalDeveloperName>
    <label>datadocumento</label>
    <type>Date</type>
</CustomField>