workspace-sf/force-app/main/default/objects/public_boleto__x/fields/dataenvio__c.field-meta.xml
<CustomField>
    <fullName>dataenvio__c</fullName>
    <description>dataenvio</description>
    <externalDeveloperName>dataenvio</externalDeveloperName>
    <label>dataenvio</label>
    <type>Date</type>
</CustomField>