workspace-sf/force-app/main/default/objects/public_boleto__x/fields/dataprocessamento__c.field-meta.xml
<CustomField>
    <fullName>dataprocessamento__c</fullName>
    <description>dataprocessamento</description>
    <externalDeveloperName>dataprocessamento</externalDeveloperName>
    <label>dataprocessamento</label>
    <type>Date</type>
</CustomField>