workspace-sf/force-app/main/default/objects/public_boleto__x/fields/especie__c.field-meta.xml
<CustomField>
    <fullName>especie__c</fullName>
    <description>especie</description>
    <externalDeveloperName>especie</externalDeveloperName>
    <label>especie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>