workspace-sf/force-app/main/default/objects/public_boleto__x/fields/especiedocumento__c.field-meta.xml
<CustomField>
    <fullName>especiedocumento__c</fullName>
    <description>especiedocumento</description>
    <externalDeveloperName>especiedocumento</externalDeveloperName>
    <label>especiedocumento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>