workspace-sf/force-app/main/default/objects/public_boleto__x/fields/idcontrato__c.field-meta.xml
<CustomField>
    <fullName>idcontrato__c</fullName>
    <description>idcontrato</description>
    <externalDeveloperName>idcontrato</externalDeveloperName>
    <label>idcontrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>