workspace-sf/force-app/main/default/objects/public_boleto__x/fields/idparcela__c.field-meta.xml
<CustomField>
    <fullName>idparcela__c</fullName>
    <description>idparcela</description>
    <externalDeveloperName>idparcela</externalDeveloperName>
    <label>idparcela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>