workspace-sf/force-app/main/default/objects/public_boleto__x/fields/instrucao1__c.field-meta.xml
<CustomField>
    <fullName>instrucao1__c</fullName>
    <description>instrucao1</description>
    <externalDeveloperName>instrucao1</externalDeveloperName>
    <label>instrucao1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>