workspace-sf/force-app/main/default/objects/public_boleto__x/fields/instrucao2__c.field-meta.xml
<CustomField>
    <fullName>instrucao2__c</fullName>
    <description>instrucao2</description>
    <externalDeveloperName>instrucao2</externalDeveloperName>
    <label>instrucao2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>