workspace-sf/force-app/main/default/objects/public_boleto__x/fields/instrucao3__c.field-meta.xml
<CustomField>
    <fullName>instrucao3__c</fullName>
    <description>instrucao3</description>
    <externalDeveloperName>instrucao3</externalDeveloperName>
    <label>instrucao3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>