workspace-sf/force-app/main/default/objects/public_boleto__x/fields/localpagamento__c.field-meta.xml
<CustomField>
    <fullName>localpagamento__c</fullName>
    <description>localpagamento</description>
    <externalDeveloperName>localpagamento</externalDeveloperName>
    <label>localpagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>