workspace-sf/force-app/main/default/objects/public_boleto__x/fields/mensagemobrigatoria2__c.field-meta.xml
<CustomField>
    <fullName>mensagemobrigatoria2__c</fullName>
    <description>mensagemobrigatoria2</description>
    <externalDeveloperName>mensagemobrigatoria2</externalDeveloperName>
    <label>mensagemobrigatoria2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>