workspace-sf/force-app/main/default/objects/public_boleto__x/fields/mensagemobrigatoria__c.field-meta.xml
<CustomField>
    <fullName>mensagemobrigatoria__c</fullName>
    <description>mensagemobrigatoria</description>
    <externalDeveloperName>mensagemobrigatoria</externalDeveloperName>
    <label>mensagemobrigatoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>