workspace-sf/force-app/main/default/objects/public_boleto__x/fields/nossonumero__c.field-meta.xml
<CustomField>
    <fullName>nossonumero__c</fullName>
    <description>nossonumero</description>
    <externalDeveloperName>nossonumero</externalDeveloperName>
    <label>nossonumero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>