workspace-sf/force-app/main/default/objects/public_boleto__x/fields/numeroapolice__c.field-meta.xml
<CustomField>
    <fullName>numeroapolice__c</fullName>
    <description>numeroapolice</description>
    <externalDeveloperName>numeroapolice</externalDeveloperName>
    <label>numeroapolice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>