workspace-sf/force-app/main/default/objects/public_boleto__x/fields/numerodocumento__c.field-meta.xml
<CustomField>
    <fullName>numerodocumento__c</fullName>
    <description>numerodocumento</description>
    <externalDeveloperName>numerodocumento</externalDeveloperName>
    <label>numerodocumento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>