workspace-sf/force-app/main/default/objects/public_boleto__x/fields/numeroendosso__c.field-meta.xml
<CustomField>
    <fullName>numeroendosso__c</fullName>
    <description>numeroendosso</description>
    <externalDeveloperName>numeroendosso</externalDeveloperName>
    <label>numeroendosso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>