workspace-sf/force-app/main/default/objects/public_boleto__x/fields/numeroparcela__c.field-meta.xml
<CustomField>
    <fullName>numeroparcela__c</fullName>
    <description>numeroparcela</description>
    <externalDeveloperName>numeroparcela</externalDeveloperName>
    <label>numeroparcela</label>
    <length>30</length>
    <type>Text</type>
</CustomField>