workspace-sf/force-app/main/default/objects/public_boleto__x/fields/numexternoparceironegocio__c.field-meta.xml
<CustomField>
    <fullName>numexternoparceironegocio__c</fullName>
    <description>numexternoparceironegocio</description>
    <externalDeveloperName>numexternoparceironegocio</externalDeveloperName>
    <label>numexternoparceironegocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>