workspace-sf/force-app/main/default/objects/public_boleto__x/fields/quantidadevalorcontrato__c.field-meta.xml
<CustomField>
    <fullName>quantidadevalorcontrato__c</fullName>
    <description>quantidadevalorcontrato</description>
    <externalDeveloperName>quantidadevalorcontrato</externalDeveloperName>
    <label>quantidadevalorcontrato</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>