workspace-sf/force-app/main/default/objects/public_boleto__x/fields/sacado__c.field-meta.xml
<CustomField>
    <fullName>sacado__c</fullName>
    <description>sacado</description>
    <externalDeveloperName>sacado</externalDeveloperName>
    <label>sacado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>