workspace-sf/force-app/main/default/objects/public_boleto__x/fields/sucursal__c.field-meta.xml
<CustomField>
    <fullName>sucursal__c</fullName>
    <description>sucursal</description>
    <externalDeveloperName>sucursal</externalDeveloperName>
    <label>sucursal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>