workspace-sf/force-app/main/default/objects/public_boleto__x/fields/susep__c.field-meta.xml
<CustomField>
    <fullName>susep__c</fullName>
    <description>susep</description>
    <externalDeveloperName>susep</externalDeveloperName>
    <label>susep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>