workspace-sf/force-app/main/default/objects/public_boleto__x/fields/urlboleto__c.field-meta.xml
<CustomField>
    <fullName>urlboleto__c</fullName>
    <description>urlboleto</description>
    <externalDeveloperName>urlboleto</externalDeveloperName>
    <label>urlboleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>