workspace-sf/force-app/main/default/objects/public_boleto__x/fields/usobanco__c.field-meta.xml
<CustomField>
    <fullName>usobanco__c</fullName>
    <description>usobanco</description>
    <externalDeveloperName>usobanco</externalDeveloperName>
    <label>usobanco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>