workspace-sf/force-app/main/default/objects/public_boleto__x/fields/vencimento__c.field-meta.xml
<CustomField>
    <fullName>vencimento__c</fullName>
    <description>vencimento</description>
    <externalDeveloperName>vencimento</externalDeveloperName>
    <label>vencimento</label>
    <type>Date</type>
</CustomField>