workspace-sf/force-app/main/default/objects/public_boleto__x/fields/viaboleto__c.field-meta.xml
<CustomField>
    <fullName>viaboleto__c</fullName>
    <description>viaboleto</description>
    <externalDeveloperName>viaboleto</externalDeveloperName>
    <label>viaboleto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>